# UAP_Machine_Learning

./: .pdm-python  README.md  main.py  pyproject.toml  requirements.txt
models/: animal_encoder.pkl  disease_encoder.pkl  feedforward_model.h5  scaler.pkl  xgb_model.json  xgb_model.pkl
