[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "streamlit>=1.41.1",
    "joblib>=1.4.2",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.3",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "protobuf>=4.25.0",
    "altair>=5.2.0",
    "tensorflow==2.16.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
